@@ -1,3 +1,8 @@
+2012-11-03  Borut Razem  <borutr@users.sourceforge.net>
+  * gpasm/directive.c, gpasm/lst.c, gpasm/gpasm.h.in:
+    implemented LIST directive c=xxx option
+  * gpasm/scan.l, gplink/scan.l: skip CR followed by LF
+
 2012-11-02  Borut Razem  <borutr@users.sourceforge.net>
   * gpasm/directive.c:
     db, dw: don't generate code if not in appropriate section;
